<resources>
    <string name="app_name">Meu app de Login</string>
    <!--Chaves da tela de login-->
    <string name="login_user_login">Usuário</string>
    <string name="login_user_login_placeholder">Nome de Usuário</string>

    <string name="login_user_pw">Senha</string>
    <string name="login_user_pw_placeholder">Senha</string>


    <string name="login_buttom_login">Entrar</string>
    <string name="login_buttom_Register">Cadastrar</string>
    <string name="login_buttom_forgotPw">Esqueci a Senha</string>
    <string name="login_succefull">Login efetuado com SUCESSO!!!!</string>
    <string name="login_user_forgotPw_message">Implementar funcionalida </string>

    <string name="login_user_name_empty">Nome de usario não pode ser vazio</string>
    <string name="login_user_pw_empty">Senha de usuario não pode ser vazio</string>
<<<<<<< HEAD
=======
    <string name="login_user_wrong_user_name_or_pw">Nome de Usuario ou senha incorretos </string>
>>>>>>> d9e25f5 (Atualizado 20/04/2024)
</resources>
