<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="69dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/top_default_margin"
        android:text="@string/login_user_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:inputType="text"
        android:minHeight="@dimen/edit_texts_min_height"
        android:hint="@string/login_user_login_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUser" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:hint="@string/login_user_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:hint="@string/login_user_pw_placeholder"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:text="@string/login_buttom_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginTop="@dimen/top_default_margin"
        android:layout_marginEnd="@dimen/right_default_margin"
        android:text="@string/login_buttom_Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonForgotPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_marginStart="@dimen/left_default_margin"
        android:layout_marginTop="@dimen/top_default_margin"
        android:text="@string/login_buttom_forgotPw"
        app:layout_constraintStart_toStartOf="parent"
<<<<<<< HEAD
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"/>
<!--        android:onclick="forgotPW"-->
</androidx.constraintlayout.widget.ConstraintLayout>
=======
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        android:onclick="forgotPW" />
>>>>>>> d9e25f5 (Atualizado 20/04/2024)

